<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EFD5B3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="CHÍNH SÁCH BẢO MẬT"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GIỚI THIỆU"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp1"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bảo mật dữ liệu"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp2"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BẢNG CHÚ GIẢI"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CƠ SỞ PHÁP LUẬT"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp3"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:shadowColor="#FF0000"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/btn4"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="ĐỒNG Ý"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="#FD0000"
            android:shadowRadius="5"
            android:background="@drawable/tabbar"
            android:gravity="center"
            android:contentDescription="@string/button11"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>